# letmidier

./: .gitignore  letmidier.code-workspace  pyproject.toml
src/: exceptions.py  img2midi.py  main.py  utils.py
src/process_video/: _one_image.py  main.py  self_ocr.py
