[tool.poetry]
package-mode = false
name = "letmidier"
version = "0.1.0"
description = "Text to Midi"
authors = ["fffena <132272963+fffena@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fonttools = "^4.53.0"
findsystemfontsfilename = "^0.3.0"
pillow = "^10.4.0"
numpy = "^2.0.0"
mido = "^1.3.2"
cairosvg = "^2.7.1"
opencv-python = "^4.10.0.84"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
